# boomncrash

./: .env.example  .gitignore  Anchor.toml  README.md  hardhat.config.ts  netlify.toml  package-lock.json  package.json  tsconfig.json
contracts/: BountyEscrow.sol  BountyFactory.sol  FeeCollector.sol
contracts/interfaces/: IFeeCollector.sol
db/: schema.sql
deployments/: base-sepolia.json
docs/: DEPLOY.md  MAINNET.md  PRD.md
programs/bounty_escrow/: Cargo.toml
programs/bounty_escrow/src/: lib.rs
scripts/: deploy-base.ts  write-solana-deployment.ts
test/: BountyEscrow.test.ts
web/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.json
web/db/: index.ts  schema.ts
web/scripts/: migrate-if-configured.mjs
web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/components/: auth-context.tsx  badge-row.tsx  bounty-card.tsx  category-subscriptions-panel.tsx  client-providers.tsx  creator-panel.tsx  creator-profile-card.tsx  creator-review-panel.tsx  dispute-panel.tsx  email-settings-panel.tsx  footer.tsx  header.tsx  hunter-rep-badge.tsx  notification-bell.tsx  privy-auth-provider.tsx  privy-provider.tsx  providers.tsx  rally-panel.tsx  referral-claim.tsx  referral-panel.tsx  share-bounty-button.tsx  solana-wallet-context.tsx  wallet-context.tsx
web/src/lib/: admin-auth.ts  badges.ts  bounty-enrichment.ts  bounty-status.ts  category-notifications.ts  chain-config.ts  constants.ts  creator-auth.ts  disputes.ts  email-alerts.ts  email-footer.ts  email-verification.ts  hunter-rep.ts  json-ld.tsx  profile.ts  (+11 more)
(+60 files in other folders)
