[package]
name = "bounty_escrow"
version = "0.1.0"
description = "Bountly USDC escrow program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
